--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,14 @@ test:
   <<: *default
   database: db/test.sqlite3
 
+# データベース（MySQL）へ接続する為の記述
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: <%= ENV['DB_DATABASE'] %> #環境変数
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
+  host: <%= ENV['DB_HOST'] %> #環境変数
+  username: <%= ENV['DB_USERNAME'] %> #環境変数
+  password: <%= ENV['DB_PASSWORD'] %> #環境変数
